# sGLOH2-OpenCV-Implementation

./: .gitignore  CMakeLists.txt  README.md  output3.txt
data/: paper.md
src/: ImageComparator.hpp  ImageComparatorSgloh.hpp  ImageComparatorSift.hpp  imageMatcher.cpp  imageMatcher.h  imageMatcher.hpp  main.cpp  sGLOH2.cpp  sGLOH2.hpp  sGlohUtilites.hpp  tests.hpp
test_scripts/: clean.py  scripts.md  synthetic_rotation.py  tests.py
